--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "git@github.com:WPitak/loki-helper.git",
   "author": "WPitak <w.pitaknitinun@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest \"(?!(node_modules/)).*\\.test\\.js$\"",
+    "test:watch": "jest \"(?!(node_modules/)).*\\.test\\.js$\" --watch"
+  },
   "devDependencies": {
     "jest": "^22.1.2",
     "rimraf": "^2.6.2",
@@ -15,6 +19,7 @@
     "debug": "^3.1.0",
     "joi": "^13.1.0",
     "lodash": "^4.17.4",
-    "lokijs": "^1.5.1"
+    "lokijs": "^1.5.1",
+    "mkdirp": "^0.5.1"
   }
 }
