--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "custom-error-factory": "git://github.com/WPitak/custom-error-factory.git#v1.0.0",
     "debug": "^3.1.0",
     "joi": "^13.1.0",
     "lodash": "^4.17.4",
